# htb

./: .gitignore  README.md  imdb_sentiment_analysis.ipynb  malware_classification.ipynb  network_anomaly_detection.ipynb  pyproject.toml  sentiment_classifier.py  skills_assessment.py  spam_classification.ipynb
application_and_system/: model_reverse_engineering.ipynb
data_attacks/: README.md  clean-label-student-template.ipynb  clean_label_attacks.ipynb  label-flipping-student-template.ipynb  label_flipping.ipynb  rickroll_steganography_attack.ipynb  skills-assessment-student-template.ipynb  steganography_attack.ipynb  steganography_rickroll_attack.ipynb  student_trojan_mnist.ipynb  targeted-label-student-template.ipynb  trojan_attack.ipynb
redteam_code/: main.py
