[project]
name = "htb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "garak>=0.15.0",
    "jupyter>=1.1.1",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "split-folders>=0.6.1",
    "torchvision>=0.26.0",
    "xgboost>=3.2.0",
]
